postgres-macros/tests/fail/no_args.rs
fn main() {
    sqlm_macros::sql!("foobar {}");
}
